--- a/css/claycorbett.com.css
+++ b/css/claycorbett.com.css
@@ -18,11 +18,10 @@
 
 #siteTitle{
 	font-family: "Rockwell", serif;
-	font-size: 42px;
 	font-variant: small-caps;
-	color: #444;
-	margin-top: 5px;
-	margin-bottom: 10px;
+	color: #777;
+	/*margin-top: 5px;*/
+	/*margin-bottom: 10px;*/
 }
 
 #categoryLinks:link{
