added copy, fixed layout issues

--- a/css/claycorbett.com.css
+++ b/css/claycorbett.com.css
@@ -6,6 +6,8 @@ body{
     
 #portfolioBoardImage{
 	display: block;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 #portfolioBoardHeadings{
@@ -27,6 +29,10 @@ body{
 	border-width: 1px;
 	border-color: #999;
 	font-variant: small-caps;
+}
+
+#portfolioItemLink:hover{
+	text-decoration: none;	
 }
 
 #portfolioBoardText{
